--- a/charts/kuberpult/templates/cd-service.yaml
+++ b/charts/kuberpult/templates/cd-service.yaml
@@ -143,6 +143,10 @@ spec:
             cpu: "{{ .Values.cd.resources.requests.cpu }}"
             memory: "{{ .Values.cd.resources.requests.memory }}"
         env:
+        - name: KUBERPULT_GIT_URL
+          value: { { .Values.git.url | quote } }
+        - name: KUBERPULT_GIT_BRANCH
+          value: { { .Values.git.branch | quote } }
         - name: KUBERPULT_VERSION
           value: {{ $.Chart.AppVersion | quote}}
         - name: LOG_FORMAT
