--- a/charts/kuberpult/templates/cd-service.yaml
+++ b/charts/kuberpult/templates/cd-service.yaml
@@ -144,7 +144,7 @@ spec:
             memory: "{{ .Values.cd.resources.requests.memory }}"
         env:
         - name: KUBERPULT_GIT_URL
-          value: {{ required ".Values.git.url is required" .Values.git.url | quote }}
+          value: {{ .Values.git.url | quote }}
         - name: KUBERPULT_GIT_BRANCH
           value: {{ .Values.git.branch | quote }}
         - name: KUBERPULT_VERSION
@@ -160,8 +160,6 @@ spec:
           value: {{ .Values.argocd.insecure | quote }}
         - name: KUBERPULT_ARGO_CD_GENERATE_FILES
           value: {{ .Values.argocd.generateFiles | quote }}
-        - name: KUBERPULT_GIT_WEB_URL
-          value: {{ .Values.git.webUrl | quote }}
 {{- if .Values.datadogTracing.enabled }}
         - name: KUBERPULT_CACHE_TTL_HOURS
           value: {{ .Values.cd.cacheTtlHours | quote }}
@@ -234,8 +232,6 @@ spec:
           value: "{{ .Values.cd.backendConfig.disableQueue }}"
         - name: KUBERPULT_GIT_WRITE_COMMIT_DATA
           value: "{{ .Values.git.enableWritingCommitData }}"
-        - name: KUBERPULT_GIT_MAXIMUM_COMMITS_PER_PUSH
-          value: "{{ .Values.git.maximumCommitsPerPush }}"
         - name: KUBERPULT_ENABLE_PROFILING
           value: "{{ .Values.datadogProfiling.enabled }}"
         - name: KUBERPULT_MAXIMUM_QUEUE_SIZE
@@ -296,8 +292,6 @@ spec:
           mountPath: {{ .Values.db.migrations }}
           readOnly: false
 {{- end }}
-        - name: repository
-          mountPath: /repository
         - name: ssh
           mountPath: /etc/ssh
 {{- if .Values.datadogProfiling.enabled }}
@@ -318,12 +312,6 @@ spec:
           readOnly: true
 {{- end }}
       volumes:
-      - name: repository
-        # We use emptyDir, because none of our data needs to survive for long (it's all in the github repo).
-        # EmptyDir has the nice advantage, that it triggers a restart of the pod and creates a new volume when the current one is full
-        # Because of an issue in gitlib2, this actually happens.
-        emptyDir:
-          sizeLimit: {{ .Values.git.emptyDirSize }}
       - name: ssh
         secret:
           secretName: kuberpult-ssh
