--- a/charts/kuberpult/templates/rollout-service.yaml
+++ b/charts/kuberpult/templates/rollout-service.yaml
@@ -155,7 +155,7 @@ spec:
         - name: LOG_LEVEL
           value: {{ .Values.log.level | quote }}
         - name: KUBERPULT_DB_MIGRATIONS_LOCATION
-          value: {{ .Values.db.migrations }}
+          value: /kp/database/migrations/postgres
         - name: KUBERPULT_DB_AUTH_PROXY_PORT
           value: "{{ .Values.db.authProxyPort }}"
 {{- if .Values.datadogTracing.enabled }}
