--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
       - KUBERPULT_DB_SSL_MODE=disable
       - KUBERPULT_DB_MAX_OPEN_CONNECTIONS=10
       - KUBERPULT_DB_MAX_IDLE_CONNECTIONS=5
-      - KUBERPULT_ALLOWED_DOMAINS=www.youtube.com
+      - KUBERPULT_ALLOWED_DOMAINS=localhost
       - KUBERPULT_MIGRATION_SERVER=manifest-repo-export-service:8443
       - KUBERPULT_GRPC_MAX_RECV_MSG_SIZE=4
       - KUBERPULT_MIGRATION_SERVER_SECURE=false
