fix(database): move migrations to /migrations since /kp is used in export service
Ref: SRX-XHC4VO

--- a/charts/kuberpult/templates/cd-service.yaml
+++ b/charts/kuberpult/templates/cd-service.yaml
@@ -246,7 +246,7 @@ spec:
         - name: KUBERPULT_DB_LOCATION
           value: {{ .Values.db.location }}
         - name: KUBERPULT_DB_MIGRATIONS_LOCATION
-          value: /kp/database/migrations/postgres
+          value: /migrations/postgres
 {{- end }}
 {{- if eq .Values.db.dbOption "postgreSQL" }}
         - name: KUBERPULT_DB_NAME
