--- a/charts/kuberpult/values.yaml
+++ b/charts/kuberpult/values.yaml
@@ -458,6 +458,7 @@ revolution:
     token: ""
     # Maximum number of requests send in parallel.
     concurrency: 20
+    maxAge: 0s
 
 # Whether the rollout service should self-manage applications
 manageArgoApplications:
