fix(rollout-service): fix max age value in dora configs (#2327)
Ref: SRX-IQ7NL4

--- a/charts/kuberpult/values.yaml
+++ b/charts/kuberpult/values.yaml
@@ -457,6 +457,7 @@ revolution:
     token: ""
     # Maximum number of requests send in parallel.
     concurrency: 20
+    maxAge: 2h
 
 # Whether the rollout service should self-manage applications
 manageArgoApplications:
