--- a/charts/kuberpult/values.yaml
+++ b/charts/kuberpult/values.yaml
@@ -471,7 +471,7 @@ revolution:
     token: ""
     # Maximum number of requests send in parallel.
     concurrency: 20
-    # If enabled, revolution isn't actually contacted with new events and Kuberpult simply logs the events it would have sent
+    # If enabled, revolution isn't actually contacted with new events and Kuberpult simply logs the events it would have sent.
     # Useful if you don't want to overload Revolution with events.
     dryRun: false
 
