fix(charts): make timeout in ingress backendConfiguration configurable
Ref: SRX-1IXHJL

--- a/charts/kuberpult/templates/ingress.yaml
+++ b/charts/kuberpult/templates/ingress.yaml
@@ -220,6 +220,9 @@ spec:
   healthCheck:
     requestPath: /healthz
     type: HTTP
+  {{- if .Values.ingress.iap.timeoutSec }}
+  timeoutSec: {{.Values.ingress.iap.timeoutSec}}
+  {{- end }}
   iap:
     enabled: true
     oauthclientCredentials:
