--- a/docker-compose-unittest.yml
+++ b/docker-compose-unittest.yml
@@ -10,7 +10,11 @@ services:
       - POSTGRES_DB=kuberpult
     ports:
       - "5432:5432"
-    command: -c config_file=/etc/postgresql.conf
+    # We run a lot of unit tests in parallel, so the default limit of 100 is not sufficient
+    command: -c max_connections=500
+#    command: -c config_file=/etc/postgresql.conf
+#    volumes:
+#      - ./unittest-psql.conf:/etc/postgresql.conf
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 1s
