extending the build context so that in pkg we can access the docker compose file

--- a/pkg/Makefile
+++ b/pkg/Makefile
@@ -25,7 +25,7 @@ GO := go
 GO_FILES := $(shell find . -type f -name '*.go')
 
 all:
-	earthly -P +build-all
+	earthly -P  --build-arg CONTEXT=../ +build-all
 lint:
 	earthly +lint
 test:
