--- a/services/cd-service/Dockerfile
+++ b/services/cd-service/Dockerfile
@@ -19,7 +19,7 @@ FROM alpine:3.21
 ARG UID=1000
 ARG DIR
 LABEL org.opencontainers.image.source https://github.com/freiheit-com/kuberpult
-RUN apk --update add ca-certificates tzdata libgit2 git sqlite-libs
+RUN apk --update add ca-certificates tzdata git sqlite-libs
 RUN adduser --disabled-password --gecos "" --home "/kp" --uid ${UID} kp
 RUN chown -R kp:kp /kp
 ENV TZ=Europe/Berlin
