feat: allow other ingress pathtypes
The pathtype can now be set in helm via "ingress.pathType".

Ref: SRX-7A7FN2

--- a/charts/kuberpult/templates/ingress.yaml
+++ b/charts/kuberpult/templates/ingress.yaml
@@ -41,21 +41,21 @@ spec:
       paths:
 {{- if .Values.ingress.allowedPaths.oldRestApi }}
 # Old Rest API:
-      - pathType: Prefix
+      - pathType: {{ required ".ingress.pathType is required" .Values.ingress.pathType }}
         path: /release
         backend:
           service:
             name: kuberpult-frontend-service
             port:
               name: http
-      - pathType: Prefix
+      - pathType: {{ required ".ingress.pathType is required" .Values.ingress.pathType }}
         path: /environments
         backend:
           service:
             name: kuberpult-frontend-service
             port:
               name: http
-      - pathType: Prefix
+      - pathType: {{ required ".ingress.pathType is required" .Values.ingress.pathType }}
         path: /environment-groups
         backend:
           service:
@@ -65,7 +65,7 @@ spec:
 {{- end }}
 {{- if .Values.ingress.allowedPaths.restApi }}
 # New API:
-      - pathType: Prefix
+      - pathType: {{ required ".ingress.pathType is required" .Values.ingress.pathType }}
         path: /api/
         backend:
           service:
@@ -75,28 +75,28 @@ spec:
 {{- end }}
 {{- if .Values.ingress.allowedPaths.dex }}
 # Dex (UI Authorization flow):
-      - pathType: Prefix
+      - pathType: {{ required ".ingress.pathType is required" .Values.ingress.pathType }}
         path: /dex
         backend:
           service:
             name: kuberpult-frontend-service
             port:
               name: http
-      - pathType: Prefix
+      - pathType: {{ required ".ingress.pathType is required" .Values.ingress.pathType }}
         path: /callback
         backend:
           service:
             name: kuberpult-frontend-service
             port:
               name: http
-      - pathType: Prefix
+      - pathType: {{ required ".ingress.pathType is required" .Values.ingress.pathType }}
         path: /token
         backend:
           service:
             name: kuberpult-frontend-service
             port:
               name: http
-      - pathType: Prefix
+      - pathType: {{ required ".ingress.pathType is required" .Values.ingress.pathType }}
         path: /login
         backend:
           service:
@@ -106,7 +106,7 @@ spec:
 {{- end }}
 {{- if .Values.ingress.allowedPaths.ui }}
 # UI bootstrapping:
-      - pathType: Prefix
+      - pathType: {{ required ".ingress.pathType is required" .Values.ingress.pathType }}
         path: /ui/
         backend:
           service:
@@ -120,21 +120,21 @@ spec:
             name: kuberpult-frontend-service
             port:
               name: http
-      - pathType: Prefix
+      - pathType: {{ required ".ingress.pathType is required" .Values.ingress.pathType }}
         path: /static/js/
         backend:
           service:
             name: kuberpult-frontend-service
             port:
               name: http
-      - pathType: Prefix
+      - pathType: {{ required ".ingress.pathType is required" .Values.ingress.pathType }}
         path: /static/css/
         backend:
           service:
             name: kuberpult-frontend-service
             port:
               name: http
-      - pathType: Prefix
+      - pathType: {{ required ".ingress.pathType is required" .Values.ingress.pathType }}
         path: /favicon.png
         backend:
           service:
@@ -142,63 +142,63 @@ spec:
             port:
               name: http
 # GRPC over HTTP for UI:
-      - pathType: Prefix
+      - pathType: {{ required ".ingress.pathType is required" .Values.ingress.pathType }}
         path: /api.v1.OverviewService/
         backend:
           service:
             name: kuberpult-frontend-service
             port:
               name: http
-      - pathType: Prefix
+      - pathType: {{ required ".ingress.pathType is required" .Values.ingress.pathType }}
         path: /api.v1.BatchService/
         backend:
           service:
             name: kuberpult-frontend-service
             port:
               name: http
-      - pathType: Prefix
+      - pathType: {{ required ".ingress.pathType is required" .Values.ingress.pathType }}
         path: /api.v1.FrontendConfigService/
         backend:
           service:
             name: kuberpult-frontend-service
             port:
               name: http
-      - pathType: Prefix
+      - pathType: {{ required ".ingress.pathType is required" .Values.ingress.pathType }}
         path: /api.v1.RolloutService/
         backend:
           service:
             name: kuberpult-frontend-service
             port:
               name: http
-      - pathType: Prefix
+      - pathType: {{ required ".ingress.pathType is required" .Values.ingress.pathType }}
         path: /api.v1.GitService/
         backend:
           service:
             name: kuberpult-frontend-service
             port:
               name: http
-      - pathType: Prefix
+      - pathType: {{ required ".ingress.pathType is required" .Values.ingress.pathType }}
         path: /api.v1.VersionService/
         backend:
           service:
             name: kuberpult-frontend-service
             port:
               name: http
-      - pathType: Prefix
+      - pathType: {{ required ".ingress.pathType is required" .Values.ingress.pathType }}
         path: /api.v1.EnvironmentService/
         backend:
           service:
             name: kuberpult-frontend-service
             port:
               name: http
-      - pathType: Prefix
+      - pathType: {{ required ".ingress.pathType is required" .Values.ingress.pathType }}
         path: /api.v1.ReleaseTrainPrognosisService/
         backend:
           service:
             name: kuberpult-frontend-service
             port:
               name: http
-      - pathType: Prefix
+      - pathType: {{ required ".ingress.pathType is required" .Values.ingress.pathType }}
         path: /api.v1.EslService/
         backend:
           service:
