--- a/charts/kuberpult/templates/ingress.yaml
+++ b/charts/kuberpult/templates/ingress.yaml
@@ -18,6 +18,10 @@
 {{ fail "Values.ingress.exposeReleaseEndpoint cannot be used anymore. Use the frontend service to call the /release endpoint"}}
 {{ end -}}
 
+{{- if (and (ne .Values.ingress.pathType "Prefix") (ne .Values.ingress.pathType "Exact") (ne .Values.ingress.pathType "ImplementationSpecific")) }}
+{{ fail "ingress.pathType must be either Prefix, Exact, or ImplementationSpecific"}}
+{{ end -}}
+
 {{- if .Values.ingress.create }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
