--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -138,3 +138,26 @@ services:
       - ./services/frontend-service/src:/kp/src
       - ./services/frontend-service/public:/kp/public
     stop_grace_period: 0.5s
+  reposerver-service:
+    image: europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/kuberpult-reposerver-service:local
+    environment:
+      - LOG_LEVEL=INFO
+      - KUBERPULT_DB_LOCATION=postgres
+      - KUBERPULT_DB_MIGRATIONS_LOCATION=/migrations/postgres
+      - KUBERPULT_DB_OPTION=postgreSQL
+      - KUBERPULT_DB_NAME=kuberpult
+      - KUBERPULT_DB_USER_NAME=postgres
+      - KUBERPULT_DB_USER_PASSWORD=mypassword
+      - KUBERPULT_DB_AUTH_PROXY_PORT=5432
+      - KUBERPULT_DB_SSL_MODE=disable
+      - KUBERPULT_DB_MAX_OPEN_CONNECTIONS=5
+      - KUBERPULT_DB_MAX_IDLE_CONNECTIONS=1
+      - KUBERPULT_VERSION=v0.1.2
+    volumes:
+      - ./services/cd-service:/kp/kuberpult
+    ports:
+      - "8445:8443"
+    stop_grace_period: 0.5s
+    depends_on:
+      postgres:
+        condition: service_healthy
