fix: generate frontend server code with swagger
This adds an openapi.yaml to define the REST API of the frontend service.

This was done by listening on a new port (5555). On this new port we support 3 operations for now:
* GET /openapi.yaml: returns the yaml to be used within swagger-ui
* OPTIONS /openapi.yaml: required to allow browser to ignore the CORS rules
* GET /api/commit-deployments/{commitHash}: this works the same as on the old port.

Additionally to "pkg/api" there is now also generated code in "pkg/publicapi".
To generate both at once you can run "make -C pkg gen".

Ref: SRX-WLGQSK

--- a/pkg/Makefile
+++ b/pkg/Makefile
@@ -24,6 +24,8 @@ GO := go
 
 GO_FILES := $(shell find . -type f -name '*.go')
 
+GO_SERVER_GEN := server-gen.go
+
 all:
 	earthly -P +build-all
 lint:
@@ -31,14 +33,22 @@ lint:
 test:
 	earthly -P +test "--GO_TEST_ARGS=$(GO_TEST_ARGS)"
 
+gen: grpc-api-gen publicapi
+
+grpc-api-gen: api/v1/api.EnvironmentConfig_grpc.pb.go
 api/v1/api.EnvironmentConfig_grpc.pb.go api/v1/api.pb.go api/v1/api.pb.gw.go api/v1/api_grpc.pb.go: api/v1/api.proto buf.yaml buf.gen.yaml buf.lock
 	if grep -q '^import "google/api/annotations.proto"' $< || grep -q '^import "google/api/http.proto"' $< ; then echo 'Instead of using google.api.http protobuf annotations we write HTTP handlers by hand' ; exit 1 ; fi
 	buf generate
 
+publicapi: publicapi/$(GO_SERVER_GEN)
+publicapi/$(GO_SERVER_GEN): publicapi/api.yaml
+	go tool oapi-codegen -generate "std-http-server" -o publicapi/$(GO_SERVER_GEN) -package publicapi publicapi/api.yaml
+
 release: #no-op
 clean:
 	rm -f api/v1/*.go
-proto: api/v1/api_grpc.pb.go
+	rm -f publicapi/$(GO_SERVER_GEN)
+proto: api/v1/api_grpc.pb.go publicapi
 
 build-pr: all
 build-main: all
