--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,14 @@ services:
       interval: 1s
       timeout: 5s
       retries: 3
+  swagger-ui:
+    image: swaggerapi/swagger-ui:latest
+    ports:
+      - "80:8080"
+    environment:
+      QUERY_CONFIG_ENABLED: true # this is to allow using the query parameter "url"
+    depends_on:
+      - cd-service
   cd-service:
     image: europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/kuberpult-cd-service:local
     environment:
@@ -33,7 +41,7 @@ services:
       - KUBERPULT_DEX_RBAC_POLICY_PATH=/etc/policy.csv
       - KUBERPULT_DEX_RBAC_TEAM_PATH=/etc/team.csv
       - KUBERPULT_DEX_MOCK_ROLE=developer
-      - KUBERPULT_GIT_WRITE_COMMIT_DATA=false
+      - KUBERPULT_GIT_WRITE_COMMIT_DATA=true
       - KUBERPULT_MAXIMUM_QUEUE_SIZE=2
       - KUBERPULT_ALLOW_LONG_APP_NAMES=true
       - KUBERPULT_ARGO_CD_GENERATE_FILES=true
@@ -123,6 +131,7 @@ services:
       - KUBERPULT_GRPC_MAX_RECV_MSG_SIZE=8
     ports:
       - "8081:8081"
+      - "5555:5555"
     depends_on:
       - cd-service
     volumes:
