--- a/charts/kuberpult/values.yaml
+++ b/charts/kuberpult/values.yaml
@@ -173,6 +173,9 @@ db:
     rollout:
       maxOpen: 100
       maxIdle: 20
+    reposerver:
+      maxOpen: 5
+      maxIdle: 2
   # Kuberpult only checks for custom migrations if this flag is enabled. Otherwise, it skips them entirely, assuming
   # that there is no information we want to migrate from an existing manifest repository to the database.
   # You should only enable this flag, if you want to do a one-step upgrade of kuberpult from a (relatively old) version that still uses git as storage.
@@ -269,7 +272,37 @@ rollout:
     # If `KuberpultEventsMetricsEnabled` is enabled, Kuberpult sends metrics regarding kuberpult events received by the
     # rollout service. Useful for diagnosing possible bottlenecks on rollout service
     kuberpultEventsMetricsEnabled: false
-
+reposerver:
+  enabled: false 
+  service:
+    annotations: {}
+  pod:
+    annotations: {}
+  image: kuberpult-reposerver-service
+  resources:
+    limits:
+      cpu: 500m
+      memory: 250Mi
+    requests:
+      cpu: 500m
+      memory: 250Mi
+  # The maximum message size in megabytes the client can receive.
+  grpcMaxRecvMsgSize: 4
+  # Size of the channel that holds the Kuberpult Events received by the rollout service.
+  kuberpultEventsChannelSize: 50
+  probes:
+    liveness:
+      periodSeconds: 10
+      successThreshold: 1
+      timeoutSeconds: 5
+      failureThreshold: 10
+      initialDelaySeconds: 5
+    readiness:
+      periodSeconds: 10
+      successThreshold: 1
+      timeoutSeconds: 5
+      failureThreshold: 10
+      initialDelaySeconds: 5
 ingress:
   # The simplest setup involves an ingress, to make kuberpult available outside the cluster.
   # set to false, if you want to use your own ingress:
