chore(rollout): deprecate argo app filters (#2367)
Ref: SRX-ID0E87

--- a/charts/kuberpult/values.yaml
+++ b/charts/kuberpult/values.yaml
@@ -522,5 +522,5 @@ revolution:
 # Whether the rollout service should self-manage applications
 manageArgoApplications:
   enabled: false
-  # List of teams that should be self managed by the rollout service.
+  # DEPRECATED: List of teams that should be self managed by the rollout service.
   filter: []
