fix: Run release trains with one writing transactions
The goal here is to avoid that only *parts* of a release train are successful.

This introduce a new experimental helm parameter
"cd.experimentalParallelismOneTransaction".
When set to true the release trains to environment groups are changed:
* The go routines (1 per env) now only produce the prognosis (list of versions to be deployed).
* The go routines use a read only transaction.
* Only the requests go routine is applying the changes with a writing transaction.

Ref: SRX-JEU54H

--- a/charts/kuberpult/values.yaml
+++ b/charts/kuberpult/values.yaml
@@ -96,6 +96,7 @@ cd:
   allowedDomains: ""
   cacheTtlHours: 24
   maxNumberOfThreads: 3
+  experimentalParallelismOneTransaction: false
 
   # The lockType option is EXPERIMENTAL and may be removed or changed without a breaking change.
   # By default, (lockType: "go") the cd-service uses in-memory go-locks to make sure that
