fix(ci): fix syntax in trivy ci
Ref: SRX-5W0PRA

--- a/.github/workflows/trivy-scan.yml
+++ b/.github/workflows/trivy-scan.yml
@@ -53,7 +53,7 @@ jobs:
         fi
     - name: Run and build trivy base image
       if: inputs.trigger == 'pull-request' || inputs.trigger == 'main'
-      run:
+      run: |
        cd trivy
        VERSION=$IMAGE_TAG_KUBERPULT make build-base-image
        VERSION=$IMAGE_TAG_KUBERPULT make push-base-image
