--- a/.github/workflows/trivy-scan.yml
+++ b/.github/workflows/trivy-scan.yml
@@ -25,6 +25,17 @@ jobs:
           credentials_json: '${{ secrets.FDC_CORE_CI_IMAGE_READER }}'
           create_credentials_file: true
           export_environment_variables: true
+    - name: Add credentials file
+      run: |
+        cat > credential.json << EOF
+        ${{ secrets.GCP_ARTIFACT_REGISTRY_PUSH_JSON_KEY }}
+        EOF
+    - name: Login to Google Artifact Registry
+      uses: docker/login-action@v3
+      with:
+        registry: europe-west3-docker.pkg.dev
+        username: _json_key
+        password: ${{ secrets.GCP_ARTIFACT_REGISTRY_PUSH_JSON_KEY }}
 
     - name: Setup Image tag
       if: inputs.trigger == 'pull-request' || inputs.trigger == 'main'
