--- a/.github/workflows/trivy-scan.yml
+++ b/.github/workflows/trivy-scan.yml
@@ -19,17 +19,23 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
-    - name: Install earthly
-      uses: earthly/actions-setup@v1
-      with:
-          version: v0.8.13
-
     - name: "Authenticate to Google Cloud"
       uses: google-github-actions/auth@v2
       with:
           credentials_json: '${{ secrets.FDC_CORE_CI_IMAGE_READER }}'
           create_credentials_file: true
           export_environment_variables: true
+    - name: Add credentials file
+      run: |
+        cat > credential.json << EOF
+        ${{ secrets.GCP_ARTIFACT_REGISTRY_PUSH_JSON_KEY }}
+        EOF
+    - name: Login to Google Artifact Registry
+      uses: docker/login-action@v3
+      with:
+        registry: europe-west3-docker.pkg.dev
+        username: _json_key
+        password: ${{ secrets.GCP_ARTIFACT_REGISTRY_PUSH_JSON_KEY }}
 
     - name: Setup Image tag
       if: inputs.trigger == 'pull-request' || inputs.trigger == 'main'
@@ -56,10 +62,20 @@ jobs:
           echo "No valid images found in the registry for the rollout service"
           exit 1
         fi
+    - name: Run and build trivy base image
+      if: inputs.trigger == 'pull-request' || inputs.trigger == 'main'
+      run: |
+       cd trivy
+       VERSION=$IMAGE_TAG_KUBERPULT make build-base-image
+       VERSION=$IMAGE_TAG_KUBERPULT make push-base-image
     - name: Run trivy scan
       run: |
         cd trivy
-        earthly --secret-file gcp_credentials="$GOOGLE_APPLICATION_CREDENTIALS" +scan-all --kuberpult_version="$IMAGE_TAG_KUBERPULT" --trigger=${{ inputs.trigger }}
+        if [[ ${{ inputs.trigger }} == "pull-request" ]]; then
+          GCP_CREDENTIALS_PATH=$GOOGLE_APPLICATION_CREDENTIALS VERSION=$IMAGE_TAG_KUBERPULT make scan-all-pr
+        elif [[ ${{ inputs.trigger }} == "main" ]]; then
+          GCP_CREDENTIALS_PATH=$GOOGLE_APPLICATION_CREDENTIALS VERSION=$IMAGE_TAG_KUBERPULT make scan-all
+        fi
     - name: Archive reports
       uses: actions/upload-artifact@v4
       with:
