fix(trivy): fix trivy push in ci
Ref: SRX-5W0PRA

--- a/.github/workflows/trivy-scan.yml
+++ b/.github/workflows/trivy-scan.yml
@@ -66,7 +66,7 @@ jobs:
       if: inputs.trigger == 'pull-request' || inputs.trigger == 'main'
       run: |
        VERSION=$IMAGE_TAG_KUBERPULT make -C trivy build-base-image
-       VERSION=$IMAGE_TAG_KUBERPULT make push-base-image
+       VERSION=$IMAGE_TAG_KUBERPULT make -C trivy push-base-image
     - name: Run trivy scan
       run: |
         if [[ ${{ inputs.trigger }} == "pull-request" ]]; then
