--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -80,7 +80,7 @@ jobs:
       - name: Append vulnerability reports to release
         run: |
           echo $VERSION
-          earthly --secret-file gcp_credentials="$GOOGLE_APPLICATION_CREDENTIALS" ./trivy+scan-all --kuberpult_version=v${VERSION}
+          GCP_CREDENTIALS_PATH=$GOOGLE_APPLICATION_CREDENTIALS VERSION=v${VERSION} make -C trivy scan-all
           gh release upload v$VERSION trivy/kuberpult-v${VERSION}-reports.tar.gz
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
